[package]
name = "minikube"
version = "0.1.0"
authors = ["Kevin Wang <kwangsan@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[dependencies]
futures = "0.3"
hyper = "0.13"
# serde = "1.0.111"
serde = { version = "^1", features = ["derive"] }
serde_derive = "^1"
serde_json = "1.0.55"
tokio = { version = "0.2", features = ["full"] }
